[package]
name = "potions"
version = "0.1.0"
edition = "2021"

[features]
default = [ "ratatui" ]

[dependencies]
approx = "0.5.1"
async-channel = "2.3.1"
bevy_app = "0.14"
bevy_color = "0.14"
bevy_ecs = "0.14"
bevy_log = "0.14.0"
bevy_math = { version = "0.13.2", features = [ "serialize" ] }
bevy_state = "0.14"
bitflags = "2.6.0"
color-art = "0.3.8"
crossbeam = "0.8.4"
derived-deref = "2.1.0"
kolorwheel = "1.1.1"
quantities = { version = "0.12.1", features = [ "length", "area", "mass", "volume", ] }
rand = "0.8.5"
rapier2d = "0.21.0"
ratatui = { version = "0.26.3", optional = true }
ron = "0.8.1"
serde = { version = "1.0.203", features = [ "derive" ] }
uuid = "1.9.1"

[dev-dependencies]
crossterm = "0.27.0"
